deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocp-support-web
  labels:
    app: ocp-support-web
