deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-support-web
  namespace: ocp-support-web
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ocp-support-web-tls
  labels:
    app: ocp-support-web
spec:
  selector:
    app: ocp-support-web
  ports:
    - name: proxy
      port: 8443
      targetPort: 8443
      protocol: TCP
